# BoostPythonTest

python/: CMakeLists.txt
python/src/: numpytest.cpp
script/: test.py
